List.of was changed to Array.asList.
BenchmarkTest method changed.