@@ -1,8 +1,6 @@
 package com.github.nkoutroumanis;
 
-import com.sun.tools.javac.util.List;
-
-import java.util.stream.Stream;
+import java.util.Arrays;
 
 public final class Job {
 
@@ -10,7 +8,7 @@ public final class Job {
         WeatherIntegrator.newWeatherIntegrator("/Users/nicholaskoutroumanis/Desktop/csv",
                 "/Users/nicholaskoutroumanis/Desktop/folder/", "./grib_files", 4,
                 9, 8, "dd/MM/yyyy hh:mm:ss",
-                List.of("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
+                Arrays.asList("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
                 .clearExportingFiles().useIndex().build().IntegrateData();
     }
 }
