@@ -1,11 +1,11 @@
 package com.github.nkoutroumanis.grib;
 
 import com.github.nkoutroumanis.WeatherIntegrator;
-import com.sun.tools.javac.util.List;
 import org.junit.Test;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.infra.Blackhole;
 
+import java.util.Arrays;
 import java.util.concurrent.TimeUnit;
 
 
@@ -15,13 +15,13 @@ public class BenchmarksTest {
     private final WeatherIntegrator wiWithIndex = WeatherIntegrator.newWeatherIntegrator("/Users/nicholaskoutroumanis/Desktop/csv",
             "/Users/nicholaskoutroumanis/Desktop/folder/", "./grib_files", 4,
             9, 8, "dd/MM/yyyy hh:mm:ss",
-            List.of("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
+            Arrays.asList("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
             .clearExportingFiles().useIndex().build();
 
     private final WeatherIntegrator wiWithoutIndex = WeatherIntegrator.newWeatherIntegrator("/Users/nicholaskoutroumanis/Desktop/csv",
             "/Users/nicholaskoutroumanis/Desktop/folder/", "./grib_files", 4,
             9, 8, "dd/MM/yyyy hh:mm:ss",
-            List.of("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
+            Arrays.asList("Relative_humidity_height_above_ground", "Temperature_height_above_ground"))
             .clearExportingFiles().useIndex().build();
 
     @Benchmark
